# kata-notone

./: README.md  pyproject.toml
notone/: console.py  game.py  main.py  schema.py  signals.py  stress_test.py  tournament.py  types.py
notone/players/: __init__.py  acey_deucy.py  aggro_aiden.py  analytical_alec.py  cautious_carter.py  gangsta_gary.py  nadire_beatrycze.py  one_dicerection.py  p1.py  p10.py  p11.py  p12.py  p13.py  p14.py  p15.py  p16.py  p2.py  p3.py  p4.py  p5.py  p6.py  p7.py  p8.py  p9.py  template.py
tests/: conftest.py  test_game.py  test_game_runner.py  test_player_api.py  test_tournament.py  test_tournament_runner.py
