[tool.poetry]
name = "notone"
version = "0.1.0"
description = "Plays the dice game Not One"
authors = ["Kyle Adams <kadams54@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.scripts]
notone = "notone.main:play"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
ruff = "^0.1.14"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
