[tool.poetry]
name = "notone"
version = "0.2.0"
description = "Plays the dice game Not One"
authors = ["Kyle Adams <kadams54@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.scripts]
notone = "notone.main:main"

[tool.poetry.dependencies]
python = "^3.9"
blinker = "^1.7.0"
typer = {extras = ["all"], version = "^0.9.0"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
ruff = "^0.1.14"
pytest-mock = "^3.12.0"
faker = "^22.6.0"
pytest-sugar = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
